# corba-test

./: CMakeLists.txt
data/: data.idl
src/: CServiceA.cpp  CServiceA.h  data.hh  dataSK.cc  server.cpp
